[gd_scene load_steps=4 format=3 uid="uid://5v28lfta88hr"]

[ext_resource type="Script" uid="uid://cxkdpkmib1dfy" path="res://Resources/CutScenePlayer.gd" id="1_jemp0"]
[ext_resource type="Texture2D" uid="uid://devgmlcd583ee" path="res://Assets/test_rags.jpg" id="2_uf1kp"]

[sub_resource type="LabelSettings" id="LabelSettings_kygvi"]
font_size = 24
font_color = Color(0, 0.5803922, 0.9372549, 1)

[node name="CutscenePlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jemp0")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueBox" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox/MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="DialogueBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "hello"
label_settings = SubResource("LabelSettings_kygvi")
horizontal_alignment = 1

[node name="DialogueLabel" type="RichTextLabel" parent="DialogueBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1500, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "test test test test test test test"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="DialogueBox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ContinueButton" type="Button" parent="DialogueBox/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue ->"

[node name="SkipButton" type="Button" parent="DialogueBox/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Skip"

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -180.0
offset_right = 540.0
offset_bottom = 180.0
grow_vertical = 2
texture = ExtResource("2_uf1kp")
stretch_mode = 5
